# lox_interpreter

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  main.cpp
include/lox_interpeter/: expression.hpp  generate_ast.cpp  generate_ast.hpp  lox.hpp  scanner.cpp  scanner.hpp  token.hpp  token_type.hpp
src/: expression.hpp  generate_ast.cpp  generate_ast.hpp  lox.cpp  scanner.cpp  scanner.hpp  token.cpp  token.hpp  token.ipp  token_type.hpp
